--- a/app/assets/stylesheets/purchase-confirmation.scss
+++ b/app/assets/stylesheets/purchase-confirmation.scss
@@ -11,20 +11,62 @@ body{
 .confirmation-header {
     height: 128px;
     text-align: center;
-
     h1{
-        font-size: 100%;
+        width: 193px;
+        height: 49px;
+        display: inline-block;
+        box-sizing: border-box;
+        margin: 40px auto 0;
         font-weight: normal;
+    }
+}
 
-        &__link {
-            width: 185px;
-            height: 49px;
-            line-height: 49px;
-        }
+main {
+    display: block;
 
-            &__mercarilogo {
-                width: 185px;
-                height: 49px;   
+    .confirmation-main{
+        &__container{
+            width: 700px;
+            height: 600px;
+            margin: 0 auto;
+            background: #fff;
+            
+
+            &__header{
+                padding: 16px;
+                font-size: 22px;
+                line-height: 1.5;
+                text-align: center;
+                font-weight: bolder;
             }
+
+            &__buy-content{
+                padding: 24px 12.5px 0;
+                border-top: 1px solid #f5f5f5;
+                &__inner{
+                    max-width: 320px;
+                    margin: 0 auto;
+                    display: flex;
+                    flex-wrap: wrap;
+                    &__item{
+                        height: 72px;
+                        width: 64px;
+                        &__image{
+                            height: 64px;
+                            width: 64px;
+                        }
+                    }
+
+                    &__item-name{
+                        width: calc(100% - 80px);
+                        margin: 0 0 0 16px;
+                        text-align: left;
+                        font-size: 16px;
+                        font-weight: 600;
+                        line-height: 1.5;
+                    }
+                }
+            }
+        }
     }
 }
