--- a/app/views/shared/_purchase-confirmation.html.haml
+++ b/app/views/shared/_purchase-confirmation.html.haml
@@ -1,4 +1,19 @@
 .confirmation-header
   %h1
-    %a.confirmation-header__link{href: '#'}
+    -# %a.confirmation-heade__link{href: '#'}
+    =link_to "#", class: "confirmation-heade__link" do
       %img.confirmation-header__link__mercarilogo{alt: "confirmation-mercarilogo", src: "/confirmation-mercarilogo.svg"}
+
+%main.confirmation-main
+  %section.confirmation-main__container
+    %h2.confirmation-main__container__header
+      購入内容の確認
+    
+    %section.confirmation-main__container__buy-content
+      .confirmation-main__container__buy-content__inner
+        %h3.confirmation-main__container__buy-content__inner__item
+          %img.confirmation-main__container__buy-content__inner__item__image{ alt: "buy-item-image", src: "https://static.mercdn.net/thumb/photos/m57058223520_1.jpg?1567902416" }
+        %p.confirmation-main__container__buy-content__inner__item-name
+          付録：ピーナッツ スヌーピーのおうちと仲間たちチャーリーブラウンの縦型ポーチ
+    %section
+    %section 
