--- a/app/views/layouts/_profile-sidebar.html.haml
+++ b/app/views/layouts/_profile-sidebar.html.haml
@@ -39,8 +39,67 @@
             %li
               =link_to "#" .mypage-item-link-box
                 %figure
-                  %
+                  %img.lazyloaded{data-src:"/user_image_1.jpg"}
+                %div.notification-message-box 「事務局から個別メッセージ「期間限定、売れたら梱包に使える特製ダンボールが無料でもらえます！」
+                  %time
+                    %i.icon-time
+                      \::before
+                         %span 1時間前
+                %i.icon-arrow-right
+                  \::before
+                  
+            %li
+              =link_to "#" .mypage-item-link-box
+                %figure
+                  %img.lazyloaded{data-src:"/user_image_2.jpg"}
+                %div.notification-message-box モコなりさん、他３名が「新商品 プログラミング教材の決定版」にいいね！しました
+                  %time
+                    %i.icon-time
+                      \::before
+                         %span 5時間前
+                %i.icon-arrow-right
+                  \::before
 
+            %li
+              =link_to "#" .mypage-item-link-box
+                %figure
+                  %img.lazyloaded{data-src:"/user_image_3.jpg"}
+                %div.notification-message-box マップマーケティングさん、他7名が「ロングヒットの秘訣」にいいね！しました
+                  %time
+                    %i.icon-time
+                      \::before
+                         %span 8時間前
+                %i.icon-arrow-right
+                  \::before
+
+            %li
+              =link_to "#" .mypage-item-link-box
+                %figure
+                  %img.lazyloaded{data-src:"/user_image_4.jpg"}
+                %div.notification-message-box 旧DMMさん、他2名が「訳ありコーヒーメーカー」にいいね！しました
+                  %time
+                    %i.icon-time
+                      \::before
+                         %span 10時間前
+                %i.icon-arrow-right
+                  \::before
+
+            %li
+              =link_to "#" .mypage-item-link-box
+                %figure
+                  %img.lazyloaded{data-src:"/user_image_5.jpg"}
+                %div.notification-message-box 内山田洋とクール・ファイブさん、他24名が「だからあなたは悪徳商法に騙される」にいいね！しました
+                  %time
+                    %i.icon-time
+                      \::before
+                         %span 15時間前
+                %i.icon-arrow-right
+                  \::before
+            
+            %li.index-go-list
+              =link_to "#" 一覧を見る
+
+            
               
 
         
