--- a/app/views/shared/_purchase-confirmation.html.haml
+++ b/app/views/shared/_purchase-confirmation.html.haml
@@ -2,7 +2,7 @@
 .confirmation-header
   %h1
     =link_to "#", class: "confirmation-heade__link" do
-      %img.confirmation-header__link__mercarilogo{alt: "confirmation-mercarilogo", src: "/confirmation-mercarilogo.svg"}
+      = image_tag '/confirmation-mercarilogo.svg', size: "", alt: "confirmation-mercarilogo" , class: 'confirmation-header__link__mercarilogo'
 
 -# メイン画面
 %main.confirmation-main
@@ -15,7 +15,7 @@
     %section.confirmation-main__container__buy-content
       .confirmation-main__container__buy-content__inner
         %h3.confirmation-main__container__buy-content__inner__item
-          %img.confirmation-main__container__buy-content__inner__item__image{ alt: "buy-item-image", src: "https://static.mercdn.net/thumb/photos/m57058223520_1.jpg?1567902416" }
+          = image_tag '/confirm-test.jpg', size: "", alt: "buy-item-image" , class: 'confirmation-main__container__buy-content__inner__item__image'
         %p.confirmation-main__container__buy-content__inner__item-name
           付録：ピーナッツ スヌーピーのおうちと仲間たちチャーリーブラウンの縦型ポーチ
         -# ポイント、支払い金額、購入ボタン
