--- a/app/assets/stylesheets/top_pege_middle.scss
+++ b/app/assets/stylesheets/top_pege_middle.scss
@@ -1,11 +1,12 @@
 
 .middle{
+
   position: relative;
-    min-height: 100%;
-    color: rgb(51, 51, 51);
-    background-color: rgb(245, 245, 245);
-    font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
-    font-size: 14px;
+  min-height: 100%;
+  color: rgb(51, 51, 51);
+  background-color: rgb(245, 245, 245);
+  font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+  font-size: 14px;
   background-color: rgb(255, 255, 255);
   max-width: 1020px;
   width: 100%;
@@ -19,38 +20,45 @@
       width: 100%;
       height: 400px;
       padding-top: 28px;
+      box-sizing: border-box;
       // max-width: 100%;
     }
     &__category{
+
       height: 171px;
       display: block;
       position: relative;
-      background-color: red
-      // padding-top: 56px;
-      // padding-bottom: 30px;
-      // width: 100%;
-      // padding: 56px 0px 30px;
+      width: 100%;
+      padding: 56px 0px 30px;
+      box-sizing: border-box;
+      
       &__area{
-
       }
       &__text{
+
         margin-bottom: 16px;
         text-align: center;
+        box-sizing: border-box;
         font-size: 28px;
         font-weight: 600;
         line-height: 1.4em;
+        margin-bottom: 16px;
+        text-align: center;
         
       }
       &__under{
+
         &__area{
           height: 40px;
           // display: block;
           text-align: center;
           width: 100%;
           margin: -10px 0px 0px -10px;
+          box-sizing: border-box;
           &__a{
             // display: inline-block;
             margin: 10px 0px 0px 10px;
+
             &__1{
               background-color: rgb(239, 239, 239);
               cursor: pointer;
@@ -61,8 +69,6 @@
               padding: 8px 16px;
               text-decoration: none;
               color: rgb(51, 51, 51);
-
-
             }
             &__2{
               background-color: rgb(239, 239, 239);
@@ -105,25 +111,30 @@
   }
 
 .middle__main__block{
+
+  padding: 42px 0px 100px;
   position: relative;
-    min-height: 100%;
-    color: rgb(51, 51, 51);
-    background-color: rgb(245, 245, 245);
-    font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
-    font-size: 14px;
+  min-height: 100%;
+  color: rgb(51, 51, 51);
+  background-color: rgb(245, 245, 245);
+  font-family: Arial, 游ゴシック体, YuGothic, メイリオ, Meiryo, sans-serif;
+  font-size: 14px;
   width: 100%;
   height:2614px;
-  background-color: rgb(200, 200, 200);
+  box-sizing: border-box;
+  display: block;
 
   &__item{
     width: 100%;
     height:573px;
-    background-color: rgb(150, 200, 200);
+    background-color: rgb(245, 245, 245);
+    box-sizing: border-box;
 
     &__top{
       height:33px;
       margin-bottom: 16px;
       display: flex;
+      box-sizing: border-box;
 
       &__left{
         font-size: 24px;
@@ -134,8 +145,7 @@
         height:33px;
         color: rgb(51, 51, 51);
         position: relative;
-
-
+        box-sizing: border-box;
 
       }
       &__right{
@@ -147,54 +157,54 @@
         position: relative;
         text-decoration: none;
         cursor: pointer;
+        box-sizing: border-box;
+
+      }
+      .fas.fa-chevron-right{
+        height: 10px;
+    width: 10px;
+    bottom: 0px;
+    content: "";
+    position: absolute;
+    right: 2px;
+    top: 0px;
+    // transform: rotate(-45deg);
+    margin-top: 7px;
+    box-sizing: border-box;
+
+
       }
     }
       &__area{
-        grid-template-columns: repeat(5, 1fr);
-        gap: 20px 20px;
-        background-color: rgb(150, 150, 150);
-        display: grid;
+        float:left;
+        display: flex;
         box-sizing: border-box;
+        
+
+
         &__split{
-
-
-
+          grid-template-columns: repeat(5, 1fr);
+          gap: 20px 20px;
+          display: block;
+          background-color: rgb(245, 245, 245);
+          display: grid;
+          box-sizing: border-box;
         }
         &__a{
           cursor: pointer;
-          background-color: rgb(150, 100, 200);
+          background-color: rgb(245, 245, 245);
           height:252px;
           width: 188;
           // display: inline-block;
           position: relative;
         }
         &__1{
-
-
-
-
-
-
-
-
-
-
-
-
         }
-
-
       }
-
-
-
-
   }
-
-
-
-
 }
+
+
 .middle__main__block__item__area__1{
   
   cursor: pointer;
@@ -202,7 +212,7 @@
   position: relative;
   text-decoration: none;
   vertical-align: top;
-  position: absolute;
+  // position: absolute;
 
 .product{
 
@@ -211,29 +221,60 @@
   width: 188;
 
   &__upper{
-
+    background-color: rgb(255,255,255);
     box-sizing: border-box;
     color: #222;
     font-size: 14px;
     height: 64px;
     line-height: 1.4em;
     padding: 0 12px;
+    white-space: normal;
+    word-break: break-word;
+    -webkit-box-align: center;
+    align-items: center;
+    display: flex;
+    width: 100%;
+
     &__text{
 
       display: inline-block;
       height: 2.8em;
       overflow: hidden;
       position: relative;
-  
+      box-sizing: border-box;
+      color: #222;
+      white-space: normal;
+      word-break: break-word;
+      background: linear-gradient(90deg,hsla(0,0%,100%,0),#fff 72%);
+    bottom: 0;
+    content: "";
+    height: 50%;
+    // position: absolute;
+    right: 0;
+    width: 50%;
+
         &__after{
   
         }
-    }
+      }
     }
 
   &__under{
-    &__price{
+    height: 0;
+    overflow: hidden;
+    padding: 0 0 100%;
+    position: relative;
+    width: 100%;
+    vertical-align: baseline;
+    margin: 0px;
+    box-sizing: border-box;
+    display: block;
+    -webkit-box-direction: reverse;
+    cursor: pointer;
+    color: inherit;
 
+    &__price{
+      -webkit-box-align: center;
       lign-items: center;
       background: rgba(0,0,0,.4);
       border-radius: 0 14px 14px 0;
@@ -243,34 +284,33 @@
       display: inline-flex;
       font-size: 17px;
       height: 28px;
-    letter-spacing: .02em;
-    margin: 0;
-    padding: 0 12px;
-    position: absolute;
-    z-index: 2;
+      letter-spacing: .02em;
+      margin: 0;
+      padding: 0 12px;
+      position: absolute;
+      z-index: 2;
+      vertical-align: baseline;
+      cursor: pointer;
+      -webkit-box-direction: reverse;
+
     }
     &__img{
-      position: relative;
+      bottom: 0;
+      // position: absolute;
+      top: 0;
+      // height: 100%;
+      object-fit: cover;
+      vertical-align: top;
       width: 100%;
-      // background-color: antiquewhite
-      // height: 0;
-    // overflow: hidden;
-    // padding: 0 0 100%;
-    // position: absolute;
-    // top: 0;
-      // height: 188;
-      // width: 188;
-
-
-
+      z-index: 1;
+      margin: 0px;
+    padding: 0px;
+    box-sizing: border-box;
+    -webkit-box-direction: reverse;
+    cursor: pointer;
 
     }
-
   }
-
-
-
-
             
 }
 }
