--- a/app/views/shared/_profile-sidebar.html.haml
+++ b/app/views/shared/_profile-sidebar.html.haml
@@ -1,189 +1,189 @@
 !!!
 %html
   %head
-    -#sidebar書くよ
-  
-  %main.mypage-container.clearfix
-    %my-page-content
-      %section.mypage-icon
-        =link_to "#"
-          %figure
-            %img{src:"/"}  
-            %h2.bold username
-          %mypage-amount
-            %div
-              評価
-              %span.bold number
-            %div
-              出品数
-              %span.bold number
-      %section.mypage-tab-container
-        %ul.tabs
-          %li.notification
-            %h3
-              =link_to "" 
-                %data-toggle 
-                    お知らせ
-                    %span.mypage-number 
-                      %hidden-large  
-                             99+
-          %li.todo-list 
-            %h3 
-              =link_to "#"  
-                %data-toggle tab
-                  やることリスト
-                    %span.mypage-number 
-                      %hidden-large  
-        %div.tab-contents
-          %ul#tab-notification.mypage-item-list.tab-pane.active 
-            %li
-              =link_to "#" ,class: "mypage-item-link-box"
-                %figure
-                  %img.lazyloaded{data-src:"/user_image_1.jpg"}
-                %div.notification-message-box 
-                  「事務局から個別メッセージ「期間限定、売れたら梱包に使える特製ダンボールが無料でもらえます！」
-                  %time
-                    %i.icon-time
-                      \::before
-                         %span 1時間前
-                %i.icon-arrow-right
-                  \::before
-                  
-            %li
-              =link_to "#" ,class: "mypage-item-link-box"
-                %figure
-                  %img.lazyloaded{data-src:"/user_image_2.jpg"}
-                %div.notification-message-box モコなりさん、他３名が「新商品 プログラミング教材の決定版」にいいね！しました
-                  %time
-                    %i.icon-time
-                      \::before
-                         %span 5時間前
-                %i.icon-arrow-right
-                  \::before
-
-            %li
-              =link_to "#" ,class: "mypage-item-link-box"
-                %figure
-                  %img.lazyloaded{data-src:"/user_image_3.jpg"}
-                %div.notification-message-box マップマーケティングさん、他7名が「ロングヒットの秘訣」にいいね！しました
-                  %time
-                    %i.icon-time
-                      \::before
-                         %span 8時間前
-                %i.icon-arrow-right
-                  \::before
-
-            %li
-              =link_to "#" ,class: "mypage-item-link-box"
-                %figure
-                  %img.lazyloaded{data-src:"/user_image_4.jpg"}
-                %div.notification-message-box 寺田下心さん、他2名が「訳ありコーヒーメーカー」にいいね！しました
-                  %time
-                    %i.icon-time
-                      \::before
-                         %span 10時間前
-                %i.icon-arrow-right
-                  \::before
-
-            %li
-              =link_to "#" ,class: "mypage-item-link-box"
-                %figure
-                  %img.lazyloaded{data-src:"/user_image_5.jpg"}
-                %div.notification-message-box 内山田洋とクール・ファイブさん、他24名が「だからあなたは悪徳商法に騙される」にいいね！しました
-                  %time
-                    %i.icon-time
-                      \::before
-                         %span 15時間前
-                %i.icon-arrow-right
-                  \::before
-            
-            %li.index-go-list
-              =link_to "#" 一覧を見る
-
-          %ul#todo-tab.mypage-item-list
-            %li.mypageitem-not-found
-              現在、やることリストはありません
-
-    -#購入した商品タブの作成
-    %section.mypage-lower-tab-container
-      %h2.maypage-tab-head
-           購入した商品
-      %ul.mypage-tabs
-        %li
-          %h3
-            =link_to "#" %data-toggle.tab #ここ怪しい
-        %li.active
-          %h3
-            =link_to "#" %data-toggle.tab #ここ怪しいよ    
-      %div.tab-content
-        %ul#mypage-tab-transaction-now.mypage-item-list %tab-pane 
-          %li.mypage-item-not-found
-            取引中の商品はありません
-        %ul#mypage-tab-transaction-old.mypage-item-lists tab-pane %active
-          %li
-            =link_to "#".mypage-item-link
-              %figure
-                = image_tag '/sample-image_1', size: "", alt: "//static.mercdn.net/thumb/" , class: 'lazyloaded'
-              %div.mypage-item-body
-                %div.mypage-item-text 
-                  「焦げ付かないフライパン」を購入しました。
-                     %span 取引が完了しました
-                %div.mypage-item-status bold %done 
-                  取引完了
-              %i.icon-arrow-right
-                \::before
-
-          %li
-            =link_to "#".mypage-item-link
-              %figure
-                = image_tag '/sample-image_1', size: "", alt: "//static.mercdn.net/thumb/" , class: 'lazyloaded'
-              %div.mypage-item-body
-                %div.mypage-item-text 
-                  「焦げ付かないフライパン」を購入しました。
-                     %span 取引が完了しました
-                %div.mypage-item-status bold %done 
-                  取引完了
-              %i.icon-arrow-right
-                \::before
-          %li
-            =link_to "#".mypage-item-link
-              %figure
-                = image_tag '/sample-image_1', size: "", alt: "//static.mercdn.net/thumb/" , class: 'lazyloaded'
-              %div.mypage-item-body
-                %div.mypage-item-text 
-                  「焦げ付かないフライパン」を購入しました。
-                     %span 取引が完了しました
-                %div.mypage-item-status bold %done 
-                  取引完了
-              %i.icon-arrow-right
-                \::before
-          %li
-            =link_to "#".mypage-item-link
-              %figure
-                = image_tag '/sample-image_1', size: "", alt: "//static.mercdn.net/thumb/" , class: 'lazyloaded'
-              %div.mypage-item-body
-                %div.mypage-item-text 
-                  「焦げ付かないフライパン」を購入しました。
-                     %span 取引が完了しました
-                %div.mypage-item-status bold %done 
-                  取引完了
-              %i.icon-arrow-right
-                \::before
-          %li
-            =link_to "#".mypage-item-link
-              %figure
-                = image_tag '/sample-image_1', size: "", alt: "//static.mercdn.net/thumb/" , class: 'lazyloaded'
-              %div.mypage-item-body
-                %div.mypage-item-text 
-                  「焦げ付かないフライパン」を購入しました。
-                     %span 取引が完了しました
-                %div.mypage-item-status bold %done 
-                  取引完了
-              %i.icon-arrow-right
-                \::before
-          %li.mypage-go-back-list
+  %body.data-__gyazo-extension-added-paste-support: "true", style: ""
+    %div.default-container
+      %main.mypage-container.clearfix
+        %my-page-content
+          %section.mypage-icon
             =link_to "#"
-              一覧を見る
+              %figure
+                %img{src:"/"}  
+                %h2.bold username
+              %mypage-amount
+                %div
+                  評価
+                  %span.bold number
+                %div
+                  出品数
+                  %span.bold number
+          %section.mypage-tab-container
+            %ul.tabs
+              %li.notification
+                %h3
+                  =link_to "" 
+                    %data-toggle 
+                        お知らせ
+                        %span.mypage-number 
+                          %hidden-large  
+                                  99+
+              %li.todo-list 
+                %h3 
+                  =link_to "#"  
+                    %data-toggle tab
+                      やることリスト
+                        %span.mypage-number 
+                          %hidden-large  
+            %div.tab-contents
+              %ul#tab-notification.mypage-item-list.tab-pane.active 
+                %li
+                  =link_to "#" ,class: "mypage-item-link-box"
+                    %figure
+                      %img.lazyloaded{data-src:"/user_image_1.jpg"}
+                    %div.notification-message-box 
+                      「事務局から個別メッセージ「期間限定、売れたら梱包に使える特製ダンボールが無料でもらえます！」
+                      %time
+                        %i.icon-time
+                          \::before
+                              %span 1時間前
+                    %i.icon-arrow-right
+                      \::before
+                      
+                %li
+                  =link_to "#" ,class: "mypage-item-link-box"
+                    %figure
+                      %img.lazyloaded{data-src:"/user_image_2.jpg"}
+                    %div.notification-message-box モコなりさん、他３名が「新商品 プログラミング教材の決定版」にいいね！しました
+                      %time
+                        %i.icon-time
+                          \::before
+                              %span 5時間前
+                    %i.icon-arrow-right
+                      \::before
+
+                %li
+                  =link_to "#" ,class: "mypage-item-link-box"
+                    %figure
+                      %img.lazyloaded{data-src:"/user_image_3.jpg"}
+                    %div.notification-message-box マップマーケティングさん、他7名が「ロングヒットの秘訣」にいいね！しました
+                      %time
+                        %i.icon-time
+                          \::before
+                              %span 8時間前
+                    %i.icon-arrow-right
+                      \::before
+
+                %li
+                  =link_to "#" ,class: "mypage-item-link-box"
+                    %figure
+                      %img.lazyloaded{data-src:"/user_image_4.jpg"}
+                    %div.notification-message-box 寺田下心さん、他2名が「訳ありコーヒーメーカー」にいいね！しました
+                      %time
+                        %i.icon-time
+                          \::before
+                              %span 10時間前
+                    %i.icon-arrow-right
+                      \::before
+
+                %li
+                  =link_to "#" ,class: "mypage-item-link-box"
+                    %figure
+                      %img.lazyloaded{data-src:"/user_image_5.jpg"}
+                    %div.notification-message-box 内山田洋とクール・ファイブさん、他24名が「だからあなたは悪徳商法に騙される」にいいね！しました
+                      %time
+                        %i.icon-time
+                          \::before
+                              %span 15時間前
+                    %i.icon-arrow-right
+                      \::before
+                
+                %li.index-go-list
+                  =link_to "#" 一覧を見る
+
+              %ul#todo-tab.mypage-item-list
+                %li.mypageitem-not-found
+                  現在、やることリストはありません
+
+          -#購入した商品タブの作成
+          %section.mypage-lower-tab-container
+          %h2.maypage-tab-head
+                購入した商品
+          %ul.mypage-tabs
+            %li
+              %h3
+                =link_to "#" %data-toggle.tab #ここ怪しい
+            %li.active
+              %h3
+                =link_to "#" %data-toggle.tab #ここ怪しいよ    
+          %div.tab-content
+            %ul#mypage-tab-transaction-now.mypage-item-list %tab-pane 
+              %li.mypage-item-not-found
+                取引中の商品はありません
+            %ul#mypage-tab-transaction-old.mypage-item-lists tab-pane %active
+              %li
+                =link_to "#".mypage-item-link
+                  %figure
+                    = image_tag '/sample-image_1', size: "", alt: "//static.mercdn.net/thumb/" , class: 'lazyloaded'
+                  %div.mypage-item-body
+                    %div.mypage-item-text 
+                      「焦げ付かないフライパン」を購入しました。
+                          %span 取引が完了しました
+                    %div.mypage-item-status bold %done 
+                      取引完了
+                  %i.icon-arrow-right
+                    \::before
+
+              %li
+                =link_to "#".mypage-item-link
+                  %figure
+                    = image_tag '/sample-image_1', size: "", alt: "//static.mercdn.net/thumb/" , class: 'lazyloaded'
+                  %div.mypage-item-body
+                    %div.mypage-item-text 
+                      「焦げ付かないフライパン」を購入しました。
+                          %span 取引が完了しました
+                    %div.mypage-item-status bold %done 
+                      取引完了
+                  %i.icon-arrow-right
+                    \::before
+              %li
+                =link_to "#".mypage-item-link
+                  %figure
+                    = image_tag '/sample-image_1', size: "", alt: "//static.mercdn.net/thumb/" , class: 'lazyloaded'
+                  %div.mypage-item-body
+                    %div.mypage-item-text 
+                      「焦げ付かないフライパン」を購入しました。
+                          %span 取引が完了しました
+                    %div.mypage-item-status bold %done 
+                      取引完了
+                  %i.icon-arrow-right
+                    \::before
+              %li
+                =link_to "#".mypage-item-link
+                  %figure
+                    = image_tag '/sample-image_1', size: "", alt: "//static.mercdn.net/thumb/" , class: 'lazyloaded'
+                  %div.mypage-item-body
+                    %div.mypage-item-text 
+                      「焦げ付かないフライパン」を購入しました。
+                          %span 取引が完了しました
+                    %div.mypage-item-status bold %done 
+                      取引完了
+                  %i.icon-arrow-right
+                    \::before
+              %li
+                =link_to "#".mypage-item-link
+                  %figure
+                    = image_tag '/sample-image_1', size: "", alt: "//static.mercdn.net/thumb/" , class: 'lazyloaded'
+                  %div.mypage-item-body
+                    %div.mypage-item-text 
+                      「焦げ付かないフライパン」を購入しました。
+                          %span 取引が完了しました
+                    %div.mypage-item-status bold %done 
+                      取引完了
+                  %i.icon-arrow-right
+                    \::before
+              %li.mypage-go-back-list
+                =link_to "#"
+                  一覧を見る
                   
  
 
